ALSA: fix oops in snd_pcm_info() caused by ASoC DPCM